# callerx

./: CMakeLists.txt  README  callerx.kdev4
daemon/: CMakeLists.txt  com.nokia.csd.Call.Instance.xml  com.nokia.csd.Call.xml  daemon.cpp  daemon.h  dbustypes.cpp  dbustypes.h  main.cpp  org.callerx.xml
daemon/data/: callerx  callerx.conf
debian/: README  changelog  control  copyright  postinst  prerm  rules
lib/: CMakeLists.txt  README  callerx.cpp  callerx.h  configinteraction.cpp  configinteraction.h  daemoninteraction.cpp  daemoninteraction.h
tools/: CMakeLists.txt  README  callerxconsole.cpp  callerxconsole.h  main.cpp
